<resources>
    <!--  Bottom navigation bar phrases.  -->
    <string name="app_name">ElonMars</string>
    <string name="home_item">Home</string>
    <string name="gallery_item">Gallery</string>
    <string name="rover_gifs_item">Rover</string>
    <string name="weather_item">Weather</string>
    <string name="rocket_mission_item">Mission</string>
    <!--  -->
    <!--  "Home" screen.  -->
    <string name="flight_message">Get ready for the flight!</string>
    <!--  -->
    <!--  "Gallery" screen.  -->
    <string name="gallery_title">Gallery</string>
    <string name="photos_subtitle">Photos</string>
    <string name="favourites_subtitle">Favourites</string>
    <string name="nothing_has_been_added_here_yet">Nothing has been added here yet! :(</string>
    <string name="no_description">There\'s no description for this photo</string>
    <!--  -->
    <!--  "Mars mission" screen.  -->
    <string name="mars_mission_title">Mars Mission</string>
    <string name="mars_mission_summary">Finish all the tasks before the flight!</string>
    <string name="task_description">Getting ready for a trip to Mars!</string>
    <string name="no_tasks_for_the_day_n_click_on_the_rocket_to_create_your_task">No tasks for the day. \n Click on the rocket to create your task!</string>
    <!--  -->
    <!--  "Weather" screen.  -->
    <string name="weather_title">Weather</string>
    <string name="previous_days">Previous days</string>
    <string name="weather_fragment_latest_day">Latest day</string>
    <string name="weather_fragment_high_na">High: NA</string>
    <string name="weather_fragment_low_na">Low: NA</string>
    <string name="latest_weather">Latest Weather</string>
    <string name="temperature">°C | °F</string>
    <!--  -->
    <!--  "Settings" screen.  -->
    <string name="settings">Settings</string>
    <string name="dark_theme_key">DarkTheme</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="category_general">General</string>
    <string name="category_about">About</string>
    <string name="nasa_api_title">Nasa Api</string>
    <string name="category_rate_us">Rate us</string>
    <string name="feedback_title">Leave feedback</string>
    <string name="feedback_summary">Or say thank you:)</string>
    <!--  -->
    <!-- Alert dialog phrases -->
    <string name="alert_dialog_title">Delete task</string>
    <string name="alert_dialog_summary">Are you sure you want to delete this task?</string>
    <!--  -->
    <string name="error_message">Field can\'t be empty</string>
    <string name="fragment_error_message">Oops, something went wrong:( Reload the page</string>
    <!--  -->
    <!-- Snackbar phrases -->
    <string name="snackbar_message_add">Photo is added to favourites</string>
    <string name="snackbar_message_delete">Photo is deleted from favourites</string>
    <!--  -->
    <!-- Bottom sheet dialog phrases -->
    <string name="add_a_task">Add a task!</string>
    <string name="input_new_task_here">Input new task here</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <!--  -->
    <string name="notification_channel_name">Channel name</string>
    <string name="notification_channel_description">Channel description</string>

    <!-- Notification -->
    <string name="notification_title">It\'s a special day!</string>
    <string name="notification_summary">Today is your flight</string>

    <!--  -->
</resources>